Update to render correctly on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
 @tailwind components;
 @tailwind utilities;
 
+#root {
+  overflow-x: hidden;
+}
+
 * {
   margin: 0;
   padding: 0;
